--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Prashant Singh Portfolio</h1>
     Hello Myself Prashant Singh and I am looking forward to get a good job
     <h2>I have added a branch</h2>
+    <h3>My hobby is to watch cricket</h3>
   </body>
 </html>
