--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     Hello Myself Prashant Singh and I am looking forward to get a good job
     <h2>I have added a branch</h2>
     <h3>My hobby is to watch cricket</h3>
+    <h1>My collg was bvcoe</h1>
   </body>
 </html>
